--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -57,3 +57,8 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 'bolder';
   margin-top: 24
 }
+.the-matrix {
+  color: #606060;
+  font-size: 0.5rem;
+  line-height: 0.8rem;
+}
